--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -5,6 +5,7 @@
 html {
   scroll-behavior: smooth;
 }
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -35,4 +36,13 @@ html {
   box-shadow: rgba(88, 28, 135, 0.25) 0px 54px 55px,
     rgba(88, 28, 135, 0) 0px -12px 30px, rgba(88, 28, 135, 0) 0px 4px 6px,
     rgba(88, 28, 135, 0.1) 0px 12px 13px, rgba(88, 28, 135, 0.09) 0px -3px 5px;
+}
+
+.bg-img {
+  min-width: 800px;
+  overflow: hidden;
+}
+.bg-video {
+  height: 100%;
+  object-fit: cover;
 }
