--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -40,9 +40,11 @@ html {
 
 .bg-img {
   overflow: hidden;
+  min-width: 620px;
 }
 .bg-video {
   height: 100%;
+  object-fit: cover;
 }
 svg {
   fill: #8e3eda;
